using UnityEngine;
public class CONSTANT
{
    public static string Player = "Player";
    #region animation Player
    public static string PlayerRun = "Running";
    public static string Walking = "Walking";
    public static string meleeATK = "meleeATK";
    public static string GunReloading = "GunReloading";
    public static string GunFire = "GunFire";
    #endregion
    #region zombie
    public static string Atk = "Atk";
    public static string Dead = "Dead";
    #endregion
    #region Scene
    public static string MainMenu = "MainMenu";
    public static string MainGame = "MainGame";
    #endregion
    public static string EmotionOnDuty = "onDuty";
}